logger changes